# ChessEngine

./: .gitignore  CMakeLists.txt  ChessEngine  README.md  run.bat  run.sh
include/: board.hpp
include/gui/: gui.h
src/: board.cpp  main.cpp
